--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "preinstall": "npx only-allow pnpm",
         "build": "vite build",
         "dev": "vite"
     },
