--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "scripts": {
         "preinstall": "npx only-allow pnpm",
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "prepare": "husky"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "husky": "^9.1.7",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
