style(formatter): 新增 pint 的配置文件

--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,9 @@
         ],
         "pre-package-uninstall": [
             "Illuminate\\Foundation\\ComposerScripts::prePackageUninstall"
+        ],
+        "lint": [
+            "./vendor/bin/pint --parallel"
         ]
     },
     "extra": {
