--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "concurrently": "^9.0.1",
         "husky": "^9.1.7",
         "laravel-vite-plugin": "^2.0.0",
+        "lint-staged": "^16.2.7",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
     }
