--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "preinstall": "npx only-allow pnpm",
         "build": "vite build",
         "dev": "vite",
-        "prepare": "husky"
+        "prepare": "husky",
+        "format": "prettier . --write",
+        "format:check": "prettier . --check"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
@@ -15,6 +17,7 @@
         "husky": "^9.1.7",
         "laravel-vite-plugin": "^2.0.0",
         "lint-staged": "^16.2.7",
+        "prettier": "^3.7.4",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
     }
