--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.8",
         "laravel/boost": "^1.8",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
@@ -54,7 +55,8 @@
         ],
         "test": [
             "@php artisan config:clear --ansi",
-            "@php artisan test"
+            "@php artisan test",
+            "@test:types"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
@@ -77,7 +79,12 @@
         ],
         "lint": [
             "./vendor/bin/pint --parallel"
-        ]
+        ],
+        "test:types": "./vendor/bin/phpstan analyse"
+    },
+    "scripts-description": {
+        "lint": "Run the Pint linter",
+        "test:types": "Run the PHPStan type checker"
     },
     "extra": {
         "laravel": {
