--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "laravel-vite-plugin": "^2.0.0",
         "lint-staged": "^16.2.7",
         "prettier": "^3.7.4",
+        "prettier-plugin-blade": "^2.1.21",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
     }
