--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "lint-staged": "^16.2.7",
         "prettier": "^3.7.4",
         "prettier-plugin-blade": "^2.1.21",
+        "prettier-plugin-tailwindcss": "^0.7.2",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
     }
