--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_QUERY=true
+LOG_QUERY_SLOWER_THAN=0
+LOG_QUERY_TRIGGER=false
+LOG_QUERY_CHANNEL=daily
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
