--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "overtrue/laravel-query-logger": "^3.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.6",
